SEO: Correction du contraste des span cachés du carrousel en ajoutant la couleur noir (sans effet, car invisible)

--- a/assets/style.css
+++ b/assets/style.css
@@ -41,6 +41,10 @@ body {
 .social-link img {
 	width: 20px;
 }
+/* carrousel */
+.visually-hidden {
+    color: #000;
+}
 
 #about {
 	display: flex;
